# H-ETA-Chess-Engine

./: CMakeLists.txt  README.md  attacks.cpp  attacks.h  board.cpp  board.h  engine.cpp  engine.h  magic.txt  main.cpp  move.cpp  move.h  test.cpp  test.h  utility.cpp  utility.h
src/: CMakeLists.txt  attacks.cpp  attacks.h  board.cpp  board.h  engine.cpp  engine.h  evaluation.cpp  move.cpp  move.h  test.cpp  test.h  types.cpp  types.h  uci.cpp  uci.h  utility.cpp  utility.h
